-------------------------------------------------------------------------------
Changes in version 1.18

- Make sure to open only regular files.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.17

- Fixed a bug where paths starting with "/." would not be omitted when
  nodotfiles was set.
- Check the return value from *buf_close functions.
- Fixed a minor (but annoying) typo in listing permissions of sticky
  files.
- Path permission failures (no dot files / lock home) now produce a
  sensible system error.
- Fixed a bug where listing "/foo/*" would not include the "/foo/"
  prefix in the resulting names.
- Updated for bglibs version 1.006

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.16

- Added a port-20 socket hack, based partly on code contributed by
  Wejn.
- Fixed problems with handling interrupted system calls (strace would
  kill twoftpd).
- Converted to use bglibs.
- Added support for restarting uploads with REST.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.15

- Remember to uncork the socket before closing it.

- Fixed a bug in twoftpd-anon-conf -- getpwnam returns the same static
  struct each time it's called, but I used it in two different ways.

- Fixed a minor bug in CWD command to make it possible to cd into
  execute-only directories.

- Fixed handling when doing NLST against non-existant files.

- When making/accepting connections, abort if stdin becomes readable
  (because of additional command or hangup).
