@@ -1,5 +1,3 @@
-- Add dual-mode MDTM command for xfer backend
-
 - Tests:
   - u+s g+s +t permissions on listings
   - Proper CHROOT/SOFTCHROOT/LOCKHOME behavior
