@@ -5,5 +5,6 @@ path.o
 retr.o
 socket.o
 stat.o
+statmod.o
 state.o
 store.o
